langtools/test/tools/javac/6717241/T6717241a.out
T6717241a.java:13:21: compiler.err.cant.resolve: kindname.variable, v, , 
T6717241a.java:15:10: compiler.err.cant.resolve.args: kindname.method, m1, , int,java.lang.String
T6717241a.java:17:10: compiler.err.cant.resolve.args.params: kindname.method, m2, java.lang.Integer,java.lang.Double, int,java.lang.String
3 errors
